--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@ html {
 }
 
 .app {
+  width: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 .inner-app {
@@ -25,9 +27,6 @@ button {
 }
 
 @media screen and (max-width: 500px) {
-  .app {
-    width: 375px;
-  }
 
   .inner-app {
     padding: 0.5rem;
