--- a/src/components/Statistics.css
+++ b/src/components/Statistics.css
@@ -12,7 +12,7 @@
       font-weight: 400;
       font-size: 1rem;
       width: 50%;
-      
+
     }
   }
 
@@ -22,9 +22,62 @@
     border-radius: 50%;
   }
 
+  .statistics-container {
+    display: flex;
+    justify-content: center;
+  }
+
   .statistic-box {
+    width: 30%;
+    padding: 1rem;
+
     p {
       margin-top: 0.5rem;
+    }
+  }
+
+  #detailed-records {
+    margin-top: 2rem;
+  }
+
+  #fully-customizable {
+    margin-top: 4rem;
+  }
+
+  .statistic-icon {
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #advanced-statistics {
+
+    h2 {
+      p {
+        width: 100%;
+      }
+    }
+
+    .statistics-container {
+      flex-direction: column;
+    }
+
+    .statistic-box {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      margin: 1rem 0;
+    }
+
+    #detailed-records {
+      margin-top: 0rem;
+    }
+  
+    #fully-customizable {
+      margin-top: 0rem;
     }
   }
 }
