--- a/src/components/UrlInput.css
+++ b/src/components/UrlInput.css
@@ -48,3 +48,10 @@
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    .input-control {
+        margin-top: 2rem;
+        flex-direction: column;
+    }
+}
